# ezcom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
ezmaker/: dialog.cpp  dialog.h  dialog.ui
